PG3200: Rnemae the packages to match the name of the module.
This avoids creating phony target-folders

--- a/pg3200/exercises/res/layout/oving2task1.xml
+++ b/pg3200/exercises/res/layout/oving2task1.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="no.nith.pg3200.ovinger.oving2.task1.Task1">
+    tools:context=".oving2.task1.Task1">
 
     <EditText
         android:layout_width="fill_parent"
