--- a/pg3200/exercises/res/layout/oving2.xml
+++ b/pg3200/exercises/res/layout/oving2.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context="no.nith.pg3200.ovinger.oving2.Oving2">
+    tools:context=".oving2.Oving2">
 
     <Button
         android:layout_width="fill_parent"
