--- a/pg3200/exercises/res/layout/oving2task2.xml
+++ b/pg3200/exercises/res/layout/oving2task2.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="no.nith.pg3200.ovinger.oving2.task2.Task2">
+    tools:context=".oving2.task2.Task2">
 
     <ImageView
         android:layout_width="fill_parent"
