--- a/pg3200/exercises/res/layout/oving2write_number.xml
+++ b/pg3200/exercises/res/layout/oving2write_number.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="no.nith.pg3200.ovinger.oving2.task3.WriteNumber">
+    tools:context=".oving2.task3.WriteNumber">
 
     <EditText
         android:layout_width="fill_parent"
