--- a/pg3200/a02/res/layout/main.xml
+++ b/pg3200/a02/res/layout/main.xml
@@ -3,13 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Main">
-
-    <ImageView
-        android:id="@+id/mapImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/blah" />
 
     <fragment
         android:id="@+id/map"
