--- a/pg3200/a02/res/layout/main_view.xml
+++ b/pg3200/a02/res/layout/main_view.xml
@@ -6,10 +6,9 @@
     android:orientation="vertical"
     tools:context=".Main">
 
-    <fragment
-        android:id="@+id/map"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.MapFragment" />
+        android:id="@+id/fragment_wrapper"/>
 
 </LinearLayout>
