--- a/pg3200/a02/res/values/dimens.xml
+++ b/pg3200/a02/res/values/dimens.xml
@@ -1,3 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="textsize_header">30sp</dimen>
+    <dimen name="button_margin">10dip</dimen>
+    <dimen name="width_of_buttons">175dp</dimen>
+    <dimen name="height_of_buttons">75dp</dimen>
+    <dimen name="textsize_of_victor">25sp</dimen>
+    <dimen name="margin_between_names_and_board">50dip</dimen>
+    <dimen name="margin_between_names_and_border_of_screen">20dip</dimen>
+    <dimen name="list_padding">5dip</dimen>
+    <dimen name="name_in_list_padding">15dip</dimen>
+    <dimen name="name_text_size">15sp</dimen>
+    <dimen name="victories_text_size">10sp</dimen>
 </resources>
