--- a/pg3200/a02/res/layout/forecast_list_row.xml
+++ b/pg3200/a02/res/layout/forecast_list_row.xml
@@ -2,46 +2,62 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="75dip"
+    android:layout_height="@dimen/height_of_forecast"
     android:background="@drawable/list_selector"
     android:orientation="horizontal"
     android:padding="@dimen/list_padding">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lonText"
-        android:textSize="@dimen/name_text_size"
-        android:text="Longitude: 22513"
-        android:textColor="@color/almost_black" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/latText"
-        android:textSize="@dimen/name_text_size"
-        android:text="Latitude: 22513"
-        android:textColor="@color/almost_black"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/imgRightArrow" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/date_txt"
-        android:textSize="@dimen/name_text_size"
-        android:textColor="@color/almost_black"
-        android:text="20.10.2013 15:45"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imgRightArrow"
-        android:src="@drawable/right_arrow"
-        android:layout_alignParentRight="true"
+        android:id="@+id/imgWeatherIcon"
+        android:src="@drawable/img_1"
+        android:contentDescription="Weather Icon"
         android:layout_centerVertical="true"
-        android:contentDescription="Rigth Arrow" />
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblHour"
+        android:textSize="@dimen/text_size"
+        android:text="@string/lblTime"
+        android:textColor="@color/almost_black"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imgWeatherIcon"
+        android:layout_marginLeft="@dimen/margin_forecast_latlng" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lblTmp"
+        android:textSize="@dimen/text_size"
+        android:text="@string/lblTemp"
+        android:textColor="@color/almost_black"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/imgWeatherIcon"
+        android:layout_marginLeft="@dimen/margin_forecast_latlng" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtHour"
+        android:textSize="@dimen/text_size"
+        android:text="27.10.2013 11:00"
+        android:textColor="@color/almost_black"
+        android:layout_alignBottom="@+id/lblHour"
+        android:layout_toRightOf="@+id/lblTmp"
+        android:layout_marginLeft="@dimen/margin_forecast_lbls" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtTemp"
+        android:textSize="@dimen/text_size"
+        android:text="@string/degrees"
+        android:textColor="@color/almost_black"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/lblTmp"
+        android:layout_marginLeft="@dimen/margin_forecast_lbls" />
 
 </RelativeLayout>
