--- a/pg3200/a02/res/values/colors.xml
+++ b/pg3200/a02/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="dark_grey">#ff4b4b4b</color>
     <color name="grey">#ff969696</color>
     <color name="opaque_grey">#55c8c8c8</color>
+    <color name="blue">#ff0a64fa</color>
+    <color name="red">#ffcd0000</color>
 </resources>
