--- a/pg3200/a02/res/layout/forecasts_list_row.xml
+++ b/pg3200/a02/res/layout/forecasts_list_row.xml
@@ -10,20 +10,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lonText"
-        android:textSize="@dimen/text_size"
-        android:text="Longitude: 22513"
-        android:textColor="@color/almost_black" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/latText"
         android:textSize="@dimen/text_size"
         android:text="Latitude: 22513"
         android:textColor="@color/almost_black"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/imgRightArrow" />
+        android:layout_alignParentTop="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lonText"
+        android:textSize="@dimen/text_size"
+        android:text="Longitude: 22513"
+        android:textColor="@color/almost_black"
+        android:layout_alignRight="@+id/imgRightArrow"  />
 
     <TextView
         android:layout_width="wrap_content"
