--- a/pg3200/a02/res/menu/my_options_menu.xml
+++ b/pg3200/a02/res/menu/my_options_menu.xml
@@ -2,8 +2,10 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/clear_data"
-        android:title="@string/clear_data" />
+        android:id="@+id/activate_location"
+        android:title="@string/activate_location"
+        android:icon="@drawable/location_icon"
+        android:showAsAction="always"/>
     <item
         android:id="@+id/clear_all_data"
         android:title="@string/clear_all_data" />
