--- a/pg5100/exam/task2/web/src/main/webapp/resources/templates/footer.xhtml
+++ b/pg5100/exam/task2/web/src/main/webapp/resources/templates/footer.xhtml
@@ -4,7 +4,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
     <div class="footer">
-        <h:outputLabel value="Hello, world"/>
+        <h:outputLabel value="NITH 2013 &#169;"/>
     </div>
 </f:view>
 </html>
