--- a/pg5100/exam/task2/web/src/main/webapp/resources/templates/template.xhtml
+++ b/pg5100/exam/task2/web/src/main/webapp/resources/templates/template.xhtml
@@ -19,6 +19,7 @@
             <div class="rightColumn contentDiv">
                 <ui:insert name="content"/>
             </div>
+            <div class="push"></div>
         </div>
 
         <ui:include src="footer.xhtml"/>
