--- a/pg5100/exam/task2/web/src/main/webapp/resources/templates/template.xhtml
+++ b/pg5100/exam/task2/web/src/main/webapp/resources/templates/template.xhtml
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-        >
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
     <h:outputStylesheet library="css" name="style.css"/>
     <title>Kimbaninachepol</title>
